--- a/style/login.css
+++ b/style/login.css
@@ -37,7 +37,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/img/MANOS.jpg");
+    background-image: url("/assets/img/hero.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
